# pyscript

./: .gitignore  README.md
backend/: .env  app.py  main.py  pyproject.toml  tasks.py
backend/api/: api.py
backend/api/routes/: __init__.py  flow.py  projects.py  scripts.py  tasks.py
backend/middleware/: exception_handlers.py  logging_config.py
backend/models/: database.py  models.py
backend/schemas/: __init__.py  common.py  display.py  flow.py  project.py  script.py  task.py
backend/services/: display_service.py  flow.py  project_service.py  script_execution_service.py  script_service.py  test_script_execution_service.py
web/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.vue  main.ts
web/src/components/: FlowEditor.vue  ProjectsList.vue
